<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame"
        style="@style/Widget.Material3.BottomSheet.DragHandle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Drag handle for accessibility -->
            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/appInfo"
                android:textColor="?colorOnPrimaryContainer"
                app:icon="@drawable/baseline_info_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/source"
                android:textColor="?colorOnPrimaryContainer"
                app:icon="@drawable/baseline_assignment_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/shareApp"
                android:textColor="?colorOnPrimaryContainer"
                app:icon="@drawable/baseline_share_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/rate"
                android:textColor="?colorOnPrimaryContainer"
                app:icon="@drawable/baseline_rate_review_24"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/deleteAll"
                android:textColor="?colorOnPrimaryContainer"
                app:icon="@drawable/baseline_delete_outline_24"
                app:iconGravity="textStart"
                app:iconTint="@android:color/holo_red_dark"
                app:iconPadding="10dp" />
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>