<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OcrActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:gravity="left|top"
        android:hint="@string/ocr"
        android:paddingHorizontal="8dp"
        android:scrollbars="vertical"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:transitionName="text"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlHardcoded" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout">

    </com.google.android.material.divider.MaterialDivider>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:id="@+id/buttonEdit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/photo"
            android:src="@drawable/baseline_edit_24" />

        <ImageButton
            android:id="@+id/buttonCopy"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/copy"
            android:src="@drawable/baseline_copy_all_24" />

        <ImageButton
            android:id="@+id/buttonShare"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:src="@drawable/baseline_share_24" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:maxWidth="180dp"
        android:maxHeight="200dp"
        android:padding="2dp"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:transitionName="testImg"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:shapeAppearance="@style/RoundedStyle"
        app:strokeColor="?colorSecondaryContainer"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>