<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScrollTargetViewId="@+id/recycler_view">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/anim_layout" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_btn"
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="25dp"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_add_24"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera_btn"
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="25dp"
        android:contentDescription="@string/camera"
        android:src="@drawable/baseline_photo_camera_24"
        android:visibility="gone"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/album_btn"
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="25dp"
        android:contentDescription="@string/album"
        android:src="@drawable/baseline_insert_photo_24"
        android:visibility="gone"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scan_btn"
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="25dp"
        android:contentDescription="@string/scan"
        android:src="@drawable/baseline_qr_code_scanner_24"
        android:visibility="gone"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"/>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="?colorPrimary" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>